feat: 新增内蒙古工业大学(IMUT)教务系统适配

--- a/index/root_index.yaml
+++ b/index/root_index.yaml
@@ -72,3 +72,8 @@ schools:
     name: "湖南商务职业技术学院"
     initial: "H"
     resource_folder: "HNVCC"    
+  
+  - id: "IMUT"
+    name: "内蒙古工业大学"
+    initial: "N"
+    resource_folder: "IMUT"
