fix: 再次修正链接

--- a/resources/CTGU/adapters.yaml
+++ b/resources/CTGU/adapters.yaml
@@ -4,6 +4,6 @@ adapters:
     adapter_name: "三峡大学教务"
     category: "BACHELOR_AND_ASSOCIATE"
     asset_js_path: "ctgu.js"
-    import_url: "https://ids.ctgu.edu.cn/authserver/login?service=http://jwxt.ctgu.edu.cn/jwapp/sys/yjsrzfwapp/dbLogin/main.do/forceCas=1"
+    import_url: "http://jwxt.ctgu.edu.cn/jwapp/sys/yjsrzfwapp/dbLogin/main.do"
     maintainer: "星河欲转"
-    description: "适配三峡大学智慧教务系统,由于存在作用域问题,登录后需要点击课程表跳转课表页面才能让一键导入课表使用,非本校开发者适配如果有误建议提交issues"
+    description: "点击统一身份认证登录,\n由于存在作用域问题,登录后需要点击课程表跳转课表页面才能让一键导入课表使用,\n非本校开发者适配如果有误建议提交issues"
