--- a/index/root_index.yaml
+++ b/index/root_index.yaml
@@ -107,3 +107,8 @@ schools:
     name: "广州松田职业学院"
     initial: "G"
     resource_folder: "GZST"      
+
+  - id: "FJCPC"
+    name: "福建船政交通职业学院"
+    initial: "F"
+    resource_folder: "FJCPC"        
