--- a/index/root_index.yaml
+++ b/index/root_index.yaml
@@ -111,4 +111,9 @@ schools:
   - id: "FJCPC"
     name: "福建船政交通职业学院"
     initial: "F"
-    resource_folder: "FJCPC"        
+    resource_folder: "FJCPC"
+
+  - id: "SDDFVC"
+    name: "山东药品食品职业学院"
+    initial: "S"
+    resource_folder: "SDDFVC"       
