add: 添加重庆化工职业学院正方教务适配

--- a/index/root_index.yaml
+++ b/index/root_index.yaml
@@ -116,4 +116,9 @@ schools:
   - id: "SDDFVC"
     name: "山东药品食品职业学院"
     initial: "S"
-    resource_folder: "SDDFVC"       
+    resource_folder: "SDDFVC"
+
+  - id: "CQCIVC"
+    name: "重庆化工职业学院"
+    initial: "C"
+    resource_folder: "CQCIVC"
