add：添加基于html解析的青果教务通用适配
- 添加基于html解析的青果教务通用适配
- 对所有通用适配的目录结构做了调整

--- a/index/root_index.yaml
+++ b/index/root_index.yaml
@@ -13,10 +13,15 @@ schools:
     initial: "Z"
     resource_folder: "zhengfang_jiaowu"
 
-  - id: "chaoxing"
+  - id: "chaoxing_jiaowu"
     name: "超星教务系统-通用教务"
     initial: "C"
-    resource_folder: "chaoxing"  
+    resource_folder: "chaoxing_jiaowu"  
+
+  - id: "qingguo_jiaowu"
+    name: "青果教务-通用教务"
+    initial: "Q"
+    resource_folder: "qingguo_jiaowu"    
   
   - id: "CQU"
     name: "重庆大学"
