add: 淮北理工学院教务适配

--- a/index/root_index.yaml
+++ b/index/root_index.yaml
@@ -142,3 +142,8 @@ schools:
     name: "厦门城市职业学院"
     initial: "X"
     resource_folder: "XMCU"  
+
+  - id: "HBLGXY"
+    name: "淮北理工学院"
+    initial: "H"
+    resource_folder: "HBLGXY"  
