--- a/index/root_index.yaml
+++ b/index/root_index.yaml
@@ -147,3 +147,8 @@ schools:
     name: "淮北理工学院"
     initial: "H"
     resource_folder: "HBLGXY"  
+
+  - id: "XJIE"
+    name: "新疆工程学院"
+    initial: "X"
+    resource_folder: "XJIE"    
