--- a/index/root_index.yaml
+++ b/index/root_index.yaml
@@ -151,4 +151,9 @@ schools:
   - id: "XJIE"
     name: "新疆工程学院"
     initial: "X"
-    resource_folder: "XJIE"    
+    resource_folder: "XJIE" 
+
+  - id: "GDPU"
+    name: "广东药科大学"
+    initial: "G"
+    resource_folder: "GDPU"        
