add: 江苏师范大学教务适配

--- a/index/root_index.yaml
+++ b/index/root_index.yaml
@@ -161,4 +161,9 @@ schools:
   - id: "HNUST"
     name: "湖南科技大学"
     initial: "H"
-    resource_folder: "HNUST"        
+    resource_folder: "HNUST"
+
+  - id: "JSNU"
+    name: "江苏师范大学"
+    initial: "J"
+    resource_folder: "JSNU"
