--- a/resources/JSNU/adapters.yaml
+++ b/resources/JSNU/adapters.yaml
@@ -1,4 +1,4 @@
-# resources/HNUST/adapters.yaml
+# resources/JSNU/adapters.yaml
 adapters:
   - adapter_id: "JSNU_01"
     adapter_name: "江苏师范大学适配教务"
